# codeoss-andriod

./: .gitattributes  .gitignore  CLINE_HANDOFF.md  CURRENT_TASK.md  LICENSE  NATIVE_FIX_SUMMARY.md  README.md  binaries.json  build.gradle.kts  check_device.sh  diag.sh  extract_control_v2.py  fix-2  gradle.properties  napi_check.js  next-swc-new.node  package-lock.json  patch_elf.js  patch_libs.py  patch_libs_v3.py  raw_patcher.py  settings.gradle.kts  write-npmrc.sh
.helm-diag/: diag_error_2026-04-26T05-48-58-945Z.json  diag_error_2026-04-26T05-49-09-069Z.json  diag_error_2026-04-26T05-49-19-181Z.json  diag_error_2026-04-26T05-49-29-285Z.json  diag_error_2026-04-26T05-49-39-391Z.json  diag_error_2026-04-26T05-50-29-916Z.json  diag_error_2026-04-26T05-50-40-073Z.json  diag_error_2026-04-26T16-51-05-491Z.json  diag_error_2026-04-26T16-51-15-590Z.json  diag_error_2026-04-26T16-54-15-501Z.json  diag_error_2026-04-26T16-54-25-584Z.json  diag_error_2026-04-26T16-54-35-693Z.json  diag_error_2026-04-26T16-54-45-800Z.json  diag_error_2026-04-26T16-55-26-358Z.json  diag_error_2026-04-26T23-12-35-078Z.json  diag_error_2026-04-26T23-19-10-262Z.json  diag_error_2026-04-26T23-50-35-298Z.json  diag_error_2026-04-26T23-57-05-534Z.json  diag_error_2026-04-26T23-57-35-849Z.json  diag_error_2026-04-26T23-58-16-300Z.json  diag_error_2026-04-26T23-59-21-858Z.json  diag_error_2026-04-27T00-00-02-531Z.json  diag_error_2026-04-27T00-01-03-068Z.json  diag_error_2026-04-27T02-06-37-764Z.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  (+1 more)
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
(+141 files in other folders)
